--- a/styles/index.css
+++ b/styles/index.css
@@ -14,7 +14,7 @@ div {
 }
 
 .header{
-    position: fixed;
+    
     left: 0px;
     top: 0px;
     display: flex;
@@ -25,6 +25,11 @@ div {
     padding-right: 50px;
     height: 60px;
     width: 100%;
+    background-color: white;
+    box-shadow: 0px -11px 20px black;
+    
+    position: fixed;
+    z-index: 9;
 }
 
 .avatar {
@@ -72,7 +77,7 @@ ul{
 }
 .footer{
     background-color: rgb(24, 23, 23);
-    height: 60px;
+    min-height: 60px;
 
     display: flex;
     justify-content: center;
